# autostocklist

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Database.sql  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: labeler.yml
.github/workflows/: docker-validation.yml  labeler.yml  server-validate.yml  server-validation.yml  web-validate.yml  web-validation.yml
database/scripts/: 01_create_database.sql  01_create_stock_database.sql  02_insert_test_data.sql  10_create_stock_procedures.sql  90_insert_stock_test_data.sql
server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  deny.toml
server/src/: database.rs  dtos.rs  main.rs  services.rs
server/src/database/: error.rs  item.rs  stock.rs
server/src/http_configuration/: item_endpoints.rs
server/src/services/: error.rs  item_service.rs  stock_service.rs
src/: database.rs  http_configuration.rs  main.rs  services.rs
src/database/: error.rs  item.rs  mod.rs  movements.rs  stock.rs
src/dtos/: item_dtos.rs  stock_dtos.rs
src/http_configuration/: item_endpoints.rs  stock_endpoints.rs
src/services/: item_service.rs
tools/cassandra-web/: Dockerfile
web/: .eslintrc.json  README.md  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: api.tsx  env.tsx  errors.ts  index.tsx
web/src/components/App/: App.test.tsx  App.tsx
web/src/components/ItemsList/: ItemsList.tsx
web/src/components/ItemsListPage/: ItemsListPage.tsx
web/src/components/ItemsListPage/ItemsList/: ItemsList.tsx
web/src/types/: item.tsx
(+4 files in other folders)
