[package]
name = "autostocklist"
version = "1.0.0"
authors = ["Iván Cea Fontenla <ivancea96@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
# Web
actix-web = "^4.0.0-beta.9"
actix-cors = "^0.6.0-beta.2"

# Database
# Connection pool for PostgreSQL
deadpool-postgres = "^0"

postgres = { version = "^0", features = ["with-chrono-0_4"] }

# Other
serde = { version = "^1", features = ["derive"] }
dotenv = "^0"
env_logger = "^0"
chrono = "^0"
log = "^0"
itertools = "^0"
