[package]
name = "autostocklist"
version = "1.0.0"
authors = ["Iván Cea Fontenla <ivancea96@outlook.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT"

[dependencies]
# Web
actix-web = "^4.1.0"
actix-cors = "^0.6.1"

# Database
# Connection pool for PostgreSQL
deadpool-postgres = "^0"

postgres = { version = "^0", features = ["with-chrono-0_4"] }

# Other
serde = { version = "^1", features = ["derive"] }
dotenv = "^0"
env_logger = "^0"
chrono = "^0"
log = "^0"
itertools = "^0"
